<resources>
	<string name="app_name">Study</string>
	<string name="action_settings">设置</string>

	<string name="version">版本:</string>
	<string name="open">打开</string>
	<string name="close">关闭</string>

	<string name="listview">ListView</string>
	<string name="picker">Picker</string>
	<string name="gridView">GridView</string>
	<string name="spinner">Spinner</string>
	<string name="progressBar">ProgressBar</string>
	<string name="AsyncTask">AsyncTask</string>

	<string name="progressBar_add">增加</string>
	<string name="progressBar_reduce">减少</string>
	<string name="progressBar_reset">重置</string>
	<string name="progressBar_show">对话框</string>

	<string name="asynctask_internet_pictures">加载网络图片</string>
	<string name="asynctask_schedule_spdate">进度更新</string>
	<string name="webView">WebView</string>
	<string name="viewpager">ViewPager</string>
	<string name="flipper">ViewFlipper</string>
</resources>
