<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context=".MainActivity">

	<include layout="@layout/toolbar"/>

	<android.support.v4.widget.DrawerLayout
		android:id="@+id/drawer"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!--    主界面    -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">

			<Button
				android:id="@+id/show"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/progressBar_show"/>

			<ProgressBar
				android:id="@+id/progressBar"
				style="@android:style/Widget.ProgressBar.Horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:max="100"
				android:progress="50"
				android:progressDrawable="@drawable/progress_bar"
				android:secondaryProgress="80"/>

			<Button
				android:id="@+id/add"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/progressBar_add"/>

			<Button
				android:id="@+id/reduce"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/progressBar_reduce"/>

			<Button
				android:id="@+id/reset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/progressBar_reset"/>

			<TextView
				android:id="@+id/text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<!--    侧边栏    -->
		<include layout="@layout/drawerlayout"/>

	</android.support.v4.widget.DrawerLayout>

</LinearLayout>
