<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context=".MainActivity">

	<include layout="@layout/toolbar" />

	<android.support.v4.widget.DrawerLayout
		android:id="@+id/drawer"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!--    主界面    -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">

			<Button
				android:id="@+id/listview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/listview"
				/>

			<Button
				android:id="@+id/picker"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/picker"
				/>

			<Button
				android:id="@+id/asynctask"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/AsyncTask"
				/>

		</LinearLayout>
		<!--    侧边栏    -->
		<include layout="@layout/drawerlayout" />

	</android.support.v4.widget.DrawerLayout>

</LinearLayout>
